fixed navbar spacing

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -721,7 +721,7 @@ span {
   }
 
   .navbarText {
-    width: 85%;
+    width: 95%;
   }
 
   .mainContent {
